<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".Mediapp.MoreInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/MoreInfo"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/txtRevisa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Rev"
            android:fontFamily="@font/poppins_light"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombres"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            style="@style/Widget.Design.TextInputLayout"
            app:helperText="@string/HelperNombres"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNombres"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins_light"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/Nombres"/>


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilApPaterno"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtApPaterno"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/ApPaterno"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilApMaterno"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtApMaterno"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/ApMaterno"/>


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNumCelular"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCelular"
                android:layout_width="match_parent"
                android:fontFamily="@font/poppins_light"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/NumCelular"/>


        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/FNacimiento"
            android:textColor="#323232"
            android:gravity="left|center"
            android:textSize="15sp"
            android:drawableRight="@drawable/ic_down"
            app:strokeColor="#323232"/>

        <Button
            android:id="@+id/btnGenero"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/Genero"
            android:gravity="left|center"
            android:drawableRight="@drawable/ic_down"
            android:textColor="#323232"
            android:textSize="15sp"
            app:strokeColor="#323232"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_primary"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:text="@string/Siguiente"/>
        <TextView
            android:id="@+id/txtVolver"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/Volver"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/secondary"
            />
    </LinearLayout>

</LinearLayout>