<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Media"
                    android:textSize="32sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/secondary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/App"
                    android:textSize="32sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/primary"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RegExitoso"
                android:gravity="center"
                android:layout_weight="0"
                android:fontFamily="@font/poppins_light"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Felicidades"
                android:gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/btnAceptarRegistroExitoso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/btn_primary"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:text="@string/Aceptar"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>